# yandex-practicum-projects

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
common/templates/: project_template.md
common/utils/: __init__.py  data_utils.py  ml_utils.py  viz_utils.py
projects/01_project_template/: README.md
projects/1_music_of_big_cities/: README.md  music_analysis_enhanced.ipynb  music_of_big_cities.ipynb
projects/1_music_of_big_cities/reports/: music_of_big_cities.md
projects/29_machine_vision/: machine-vision.ipynb
projects/2_borrower_reliability/: README.md  borrower_reliability.ipynb
projects/2_borrower_reliability/reports/: credit_risk_analysis.md
